Made bg static so it doesnt bug and fixed alerts not showing

--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -16,7 +16,7 @@ h2, h3 {
 
 body {
   margin: 2em;
-  background: url("assets/tempo.jpg");
+  background: url("assets/tempo.jpg") fixed;
   background-size: cover;
 }
 
